# han

./: .gitignore  achievement.json  crawler.py  crawler_krdict.py  crawler_naverquiz.py  data.json  data_naverquiz.json  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
battle/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
config/: asgi.py  middleware.py  paginator.py  settings.py  urls.py
crawled_data/: admin.py  generators.py  models.py  serializers.py  urls.py  views.py
quizzes/: admin.py  generators.py  models.py  serializers.py  tests.py  urls.py  views.py
redis-cache-server/data/: dump.rdb
redis/data/: dump.rdb
users/: achieve.py  admin.py  customtoken.py  models.py  serializers.py  social.py  tests.py  urls.py  user_info.py  views.py
